common-applications/freesky-icsl-hk-cluster/openlookeng-search/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-search
  name: openlookeng-search
