common-applications/freesky-icsl-hk-cluster/openlookeng-search/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: openlookeng-search
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      annotations:
        vault.hashicorp.com/agent-inject: 'true'
        vault.hashicorp.com/role: 'freesky-hk-openlookeng-search'
        vault.hashicorp.com/agent-inject-secret-application.yml: 'internal/data/openlookeng/search-icsl'
        vault.hashicorp.com/agent-pre-populate-only: "true"
      labels:
        app: search
    spec:
      serviceAccount: openlookeng-search
      containers:
      - name: search
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/icsl/openlookeng-search:8281096ff3d69918a32941c541b57ea1e507fd89
        imagePullPolicy: IfNotPresent
        command:
        - /bin/bash
        - -c
        - |
          sed -i '1,2d;$d' /vault/secrets/application.yml
          sed -i '$d'  /vault/secrets/application.yml
          java -jar /EaseSearch/target/EaseSearch-0.0.1-SNAPSHOT.jar --spring.config.location=$APPLICATION_PATH
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 2000m
            memory: 2000Mi
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /opengauss/application.yaml
          name: configmap-volume
          subPath: application.yaml
      volumes:
      - name: configmap-volume
        secret:
          secretName: search-secrets
