common-applications/freesky-icsl-hk-cluster/openlookeng-search/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rpm: "200"
  name: openlookeng-search-ingress
  namespace: openlookeng-search
spec:
  tls:
    - hosts:
        - search.openlookeng.myopeninfra.com
      secretName: openlookeng-search-tls
  rules:
    - host: search.openlookeng.myopeninfra.com
      http:
        paths:
        - backend:
            serviceName: search-service
            servicePort: 80
          path: /
